export const snapshot = {};

snapshot[`/help 1`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==3=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "1/4",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==1=next",
            label: "Next",
            style: 2,
            type: 2,
          },
          {
            custom_id: "gacha=user_id",
            label: "/gacha",
            style: 2,
            type: 2,
          },
          {
            custom_id: "now=user_id",
            label: "/now",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "1.",
        },
        description: "Before anything: You will need characters.

__You get a free pull every 15 minutes (maxed at 5 pulls)__. Use \`/now\` to check how many pulls you have and how much time is left until your pulls recharge.

__Characters are exclusive__, once a player on the server finds a character, no one else can find that character in gacha again. You will need trade to get them.

__Characters vary in ranks from 1* to 5*__, A character rating is based on their popularity (as of right now, a character rating cannot be raised).

__Gacha rates depend on multiple variables__, but generally speaking the chances of a 5* appearing is equal or less than 1%.

\`/pull\` allows you to do gacha pulls with no animations.
​",
        footer: {
          text: "aliases: /w, /q",
        },
        title: "\`/gacha\`",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;

snapshot[`/help 2`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==0=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "2/4",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==2=next",
            label: "Next",
            style: 2,
            type: 2,
          },
          {
            custom_id: "cstars=5=user_id",
            label: "/collection stars 5",
            style: 2,
            type: 2,
          },
          {
            custom_id: "cstars=4=user_id",
            label: "/collection stars 4",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "2.",
        },
        description: "You will need a party to use combat features, but all combat features are still in development, so parties are only an aesthetic right now.

__You can't have more than 1 party__ or save your current party to a preset and switch between presets.

__The more your party members are familiar with each other the better they preform__. This is called synergy, 5 party members from the same anime are better than 5 members from a mix of different media.

\`/party view\` to view your current party.

\`/party assign [name] [spot?]\` to assign a character you found to your party;
leaving the \`[spot]\` parameter empty will assign the character to the first empty spot, or override spot #5 if no empty spots exist.

\`/party remove [spot]\` to remove a character from your party.

\`/collection stars\` and \`/collection media\` to browse your characters and select your potential party members.
​",
        footer: {
          text: "aliases: /team, /p",
        },
        title: "\`/party\`",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;

snapshot[`/help 3`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==1=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "3/4",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==3=next",
            label: "Next",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "All Commands",
        },
        description: "- \`/gacha\` \`/w\`: _start a new gacha pull_
- \`/pull\` \`/q\`: _start a quiet gacha pull with no animation_
- \`/now\` \`/vote\` \`/daily\` \`/tu\`: _check what you can do right now_
- \`/search\` \`/anime\` \`/manga\`: _search for specific media_
- \`/character\` \`/char\` \`/im\`: _search for a specific character_

- \`/party view\` \`/team view\` \`/p view\`: _view your current party_
- \`/party assign\` \`/team assign\` \`/p assign\`: _assign a character to your party_
- \`/party remove\` \`/team remove\` \`/p remove\`: _remove a character from your party_

- \`/collection stars\` \`/coll stars\` \`/mm stars\`: _list all your stars_
- \`/collection media\` \`/coll media\` \`/mm media\`: _list all your characters from a specific media_
- \`/found\` \`/obtained\` \`/owned\`: _list all characters found from a specific media_

- \`/anilist next_episode\`: _find when the next episode of an anime is airing_",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;

snapshot[`/help 4`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==2=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "4/4",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==0=next",
            label: "Next",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "Admin Commands",
        },
        description: "_> \`/packs\` requires \`Manage Server\` permission by default, but that can be changed in the \`Integrations\` section of your server settings, although we don't recommend that._
- \`/packs builtin\`: _list all the builtin packs_
- \`/packs community\`: _list all installed community packs_
- \`/packs install\`: _install a community pack_
- \`/packs uninstall\`: _uninstall a pack_",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;
